# subclaw

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_zh.md  docker-compose.yml  llms-full.txt  llms.txt  pyproject.toml
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md
.github/DISCUSSION_TEMPLATE/: idea.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
cli-skills/: live_tree_ui.py  run-claw-pool.sh
cli-skills/claude/: subclaw.md
cli-skills/codex/subclaw/: SKILL.md
cli-skills/codex/subclaw/scripts/: codex_subclaw_status.ps1  run_codex_claw_pool.ps1
docs/: 5-minute-quickstart.md  architecture.md  awesome-list-submissions.md  benchmarks.md  blog-post-devto.md  comparisons.md  distribution-checklist.md  faq.md  integrations.md  mcp-integration.md  seo-keywords.md  show-hn-post.md  use-cases.md
examples/: README.md  keys.budget-tight.json  keys.high-throughput.json  keys.minimal.json  keys.multi-provider.json
proxy/: .gitignore  README.md  app.py  dashboard.html  keys.example.json  requirements.txt
